[PN-18919] feat: fix sonar issues